tests/paczka1/fuzzy1/75713160.err
Error in line 6: chUR S587 81,8
Error in line 1: 2uTde S587 69,1
Error in line 26: R75CECa A970 39,4
Error in line 33: R75CECa A308 3,0
Error in line 35: 8BnGT6MQm S587 21,9
